update to Java 21.