@@ -131,12 +131,6 @@ This module must be built so please run the following once from the top level of
 
 from the command line before attempting to load the remaining Apollo modules into your IDE. Again, this only need be done once as this will be installed in your local Maven repository and you won't have to do it again.  Rebuilding this module will have no adverse effect on the rest of the build.
 
-### Enable Preview On The JRE
-
-This is important as well, as Apollo makes use of the Project Loom Virtual Threads preview.  This is taken care of in the Maven build, however in your IDE, you'll need to add
-*--enable-preview* as a default flag passed to the JRE.  In Eclipse, when you import the JVM, there is a setting to define default flags:
-<p><img src="media/enable-preview.png" alt="drawing" width="600"/></p>
-
 ### Eclipse M2E issues with ${os.detected.classifier}
 
 This is a known weirdness with Eclipse M2E with the [os-maven-plugin build extension](https://github.com/trustin/os-maven-plugin).  I've been fine with this, but ran into another project that Eclipse just kept refusing to resolve.  I solved this by downloading the [supplied maven plugin](https://repo1.maven.org/maven2/kr/motd/maven/os-maven-plugin/1.7.0/os-maven-plugin-1.7.0.jar) and adding this to the **<ECLIPSE_HOME>/dropins** directory.  This works because the plugin is also an Eclipse plugin, which is nice.
